# ars-machine-readable

./: .gitattributes  .gitignore  .gitmodules  CMS_ARS_3_1_catalog.json  README.md
.github/workflows/: content-artifacts.yml
3.1/generic/: 3.1.yml  ARS_3-1_Excel_Export 2021.xlsx
3.1/oscal/: 3.1.json
3.1/oscal/json/: CMS_ARS_3_1_HIGH-baseline_catalog.json  CMS_ARS_3_1_LOW-baseline_catalog.json  CMS_ARS_3_1_MODERATE-baseline_catalog.json  CMS_ARS_3_1_catalog.json
5.0/oscal/: CMS_ARS_5_0.json  CMS_ARS_5_0_catalog.json
ODP-extract/: CMS ARS 5.0 control catalog 2022-08-19.xlsx  CMS ARS 5.0 control catalog 2022-08-19.xml  ODP-example-profile.xml  ODP-example.css  ODP-example.xsl  ODP-extract (modified).xlsx  ODP-extract-cleanup.xsl  ODP-extract-edited.xml  ODP-extract-modified.xlsx  ODP-extract.css  ODP-extract.xlsx  ODP-extract.xml  ODP-extract.xsl  README.md  UTC.xsl  ars-5.0-catalog.xml  ars-5.0-catalog.xsl  ars-5.0-high-catalog.xml  ars-5.0-high-control-profile.xml  ars-5.0-high-profile.xml  ars-5.0-hva-catalog.xml  ars-5.0-hva-control-profile.xml  ars-5.0-hva-profile.xml  ars-5.0-low-catalog.xml  ars-5.0-low-control-profile.xml  ars-5.0-low-profile.xml  ars-5.0-moderate-catalog.xml  ars-5.0-moderate-control-profile.xml  ars-5.0-moderate-profile.xml  ars-5.0-odp-profile.xml  catalog2html.css  catalog2html.xsl  generate-profiles.xsl  miscellaneous-reports.css  miscellaneous-reports.xsl  profile.sch
ars-xlsx-oscal-json/: README.md  catalog31.py  catalog50.py  fisma.py  header31_map.json  header50_map.json  pyproject.toml
src/: config
(+6 files in other folders)
